# libg2hec

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  SECURITY.md  config.h  config.h.in  configure  configure.ac  configure.ac.old
.allstar/: branch_protection.yaml
.github/workflows/: build-libg2hec.yml  clang-sa.yml  codeql-analysis.yml  publish-docs.yml  release.yml  sanity.yml  shellcheck.yml
.svn/: all-wcprops  entries
.svn/text-base/: Makefile.am.svn-base  configure.svn-base
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
autom4te.cache/.svn/: all-wcprops  entries
config/.svn/: all-wcprops  entries
demo/: IEprompt.js  arithdemo  arithdemo.C  demo.html  promptcb.js  tools.js
demo/.svn/: all-wcprops  entries
demo/.svn/text-base/: Howto_compile.txt.svn-base
doc/: Makefile  Makefile.in  g2hecdoc.info  g2hecdoc.texi
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  g2hecdoc.info.svn-base  g2hecdoc.texi.svn-base
doc/.svn/tmp/: tempfile.tmp
docs/: Divisor-arithmetic.html  Divisor-functions.html  Genus-2-curve-functions.html  I_002fO.html  Installation.html  Overview.html  Quick-start.html  Randomness-functions.html  Some-issues.html  Tutorial.html  index.html
examples/: dh.C  elgamal_enc.C  elgamal_sig.C
examples/.deps/: dh.Po
examples/.deps/.svn/: all-wcprops  entries
examples/.deps/.svn/text-base/: elgmal.Po.svn-base
examples/.svn/: all-wcprops  entries
include/: g2hec_Genus2_ops.h  g2hec_NAF.h  g2hec_nsdebug.h  g2hec_nsfieldtype.h  g2hec_polytype.h  g2hec_rand.h
include/.svn/: all-wcprops  entries
include/.svn/text-base/: g2hec_nsfieldtype.h.svn-base  g2hec_nstools.h.svn-base  version.h.svn-base
include/.svn/tmp/: tempfile.tmp
m4/.svn/: all-wcprops  entries
scripts/: build.sh  install-ntl-5.5.sh  publish-docs.sh  sa-check.sh
src/: Makefile  Makefile.am  Makefile.in  add_explicit.C  cantor.C  divisor_negate.C  g2hcurve.C  g2hectest_small.shdone  rand.C  scalar_mul.C  sub.C
src/.svn/: all-wcprops  entries
src/.svn/text-base/: divisor.C.svn-base  rand.C.svn-base  testcurve.C.svn-base  testrand.C.svn-base
src/testdata/.svn/: all-wcprops  entries
src/testdata/.svn/text-base/: testdata_big00.dat.svn-base  testdata_big01.dat.svn-base  testdata_big02.dat.svn-base  testdata_big03.dat.svn-base  testdata_small00.dat.svn-base  testdata_small01.dat.svn-base  testdata_small03.dat.svn-base
